# sanjeevini

./: .gitignore  README.md  pyproject.toml  sanjeevini_prd_trd.docx
.github/workflows/: ci.yml
docs/: code_review_2026-07-23.md  index.html
examples/pipelines/: hifi_variant_calling.yaml  ont_sv_calling.yaml
goals/: pypore.yaml
src/sanjeevini/: __init__.py  cli.py
src/sanjeevini/compose/: __init__.py  pipeline.py
src/sanjeevini/contracts/: __init__.py  output_type.py  schema.py
src/sanjeevini/longread/: __init__.py  model_registry.py
src/sanjeevini/mcp/: __init__.py  server.py
src/sanjeevini/pinners/: __init__.py  bioc.py  conda.py  pypi.py
src/sanjeevini/registry/: __init__.py  catalog.py  search.py
src/sanjeevini/repair/: __init__.py  agent.py  escalation.py  knowledge.py  loop.py
src/sanjeevini/sandbox/: __init__.py  checkpoint.py  docker_sandbox.py  egress.py
src/sanjeevini/scouts/: __init__.py  python_scout.py  r_scout.py  repo.py  workflow_scout.py
tests/: conftest.py  test_agent_memory.py  test_checkpoint.py  test_compose.py  test_egress.py  test_escalation.py  test_escalation_docker.py  test_goal_override.py  test_mcp.py  test_output_type.py  test_pinner_bioc.py  test_pinner_conda.py  test_pinner_pypi.py  test_registry.py  test_registry_search.py  test_repair_agent.py  test_repair_knowledge.py  test_repair_loop.py  test_sandbox.py  test_sanity_evidence.py  test_scout_python.py  test_scout_r.py  test_scout_workflow.py
